--- a/homework4.html
+++ b/homework4.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>Meal and coctail</h1>
+    <h1>Meal and cocktail</h1>
     <div class="sidebyside">
         <!--Food-->
         <div>
