--- a/homework4.html
+++ b/homework4.html
@@ -10,24 +10,24 @@
 
 </head>
 <body>
-    <h1>Meal and cocktail</h1>
+    <h1 id="bigheader">Meal and cocktail</h1>
     <div class="sidebyside">
         <!--Food-->
         <div>
-            <img src="" id="foodimg">
-            <h2 id="titlefood">hehe</h2>
+            <img src="" id="foodimg" alt="">
+            <h2 id="titlefood"></h2>
             <h4 id="category"></h4>
-            <h3>ingredients</h3>
+            <h3 id="ingredientshead">Ingredients</h3>
             <ul id="ingredients"></ul>
-            <h3>Instructions</h3>
+            <h3 id="instructionshead">Instructions</h3>
             <p id="instructions"></p>
         </div>
 
         <!--Cocktail-->
         <div>
-            <img src="" alt="">
+            <img src="" id="cockimg" alt="">
             <h2 id="titlecocktail">hoho</h2>
-            <h3>ingredients</h3>
+            <h3 id="ingredientscocktailhead">ingredients</h3>
             <p id="ingredientscocktail"></p>
         </div>
     </div>
