--- a/homework4.html
+++ b/homework4.html
@@ -14,7 +14,7 @@
     <div class="sidebyside">
         <!--Food-->
         <div>
-            <img src="" alt="">
+            <img src="" id="foodimg">
             <h2 id="titlefood">hehe</h2>
             <h4 id="category"></h4>
             <h3>ingredients</h3>
