Finished the cocktail
Everyone worked on one computer and discussed verbal

--- a/test.html
+++ b/test.html
@@ -25,12 +25,11 @@
 
         <!--Cocktail-->
         <div>
-            <img src="" id="cocktailimg">
+            <img src="" alt="">
             <h2 id="titlecocktail">hoho</h2>
+            <p id="sjekk">sjekk</p>
             <h3>Ingredients</h3>
             <p id="ingredientscocktail"></p>
-            <h3>Instructions</h3>
-            <p id="instrcsCocktail"></p>
         </div>
     </div>
 </body>
